init(show.html): ready to use

--- a/week-07/day-2/bankofsimba/src/main/resources/templates/show.html
+++ b/week-07/day-2/bankofsimba/src/main/resources/templates/show.html
@@ -2,10 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Thymeleaf Exercise #</title>
-    <link rel="stylesheet" th:href="@{/style.css}" />
-    <meta charset="utf-8" />
+    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <meta charset="utf-8"/>
 </head>
-<body>
-
-</body>
+    <body>
+        <div th:object="${data}">
+            <h1>Welcome at BANK OF SIMBA</h1>
+            <h2 th:text="'User name: ' + *{name}"/>
+            <h2 th:text="'User balance: ' + *{balance}"/>
+            <h2 th:text="'User type: ' + *{animalType}"/>
+        </div>
+    </body>
 </html>
