fix(useful.html): fix body

--- a/week-07/day-3/usingdependecies/src/main/resources/templates/useful.html
+++ b/week-07/day-3/usingdependecies/src/main/resources/templates/useful.html
@@ -8,5 +8,7 @@
 <body>
         <h1> Available Colored Backgrounds</h1>
         <a href ="http://localhost:8080/useful/colored">Colors</a>
+        <br></br>
+        <a href ="http://localhost:8080/useful/email?email=is@this.valid">Check valid</a>
 </body>
 </html>
