gradle libary and stuff added

--- a/week-07/day-2/bankofsimba/src/main/resources/templates/show.html
+++ b/week-07/day-2/bankofsimba/src/main/resources/templates/show.html
@@ -9,7 +9,7 @@
         <div th:object="${data}">
             <h1>Welcome at BANK OF SIMBA</h1>
             <h2 th:text="'User name: ' + *{name}"/>
-            <h2 th:text="'User balance: ' + *{balance}"/>
+            <h2 th:text="'User balance: ' + *{showBalance}"/>
             <h2 th:text="'User type: ' + *{animalType}"/>
         </div>
     </body>
