--- a/week-07/day-4/programer-fox-club/src/main/resources/templates/index.html
+++ b/week-07/day-4/programer-fox-club/src/main/resources/templates/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Thymeleaf Exercise #</title>
-    <link rel="stylesheet" th:href="@{/style.css}"/>
-    <meta charset="utf-8"/>
-</head>
-<body>
-<a href="http://localhost:8080/information">Information</a>
-<br>
-<img src="greenfox.png" alt="Dr Greenfox" height="192" width="192">
-         <p th:text="'This is Mr fox Currently living on ' +
+    <head>
+        <title>Thymeleaf Exercise #</title>
+        <link rel="stylesheet" th:href="@{/style.css}"/>
+        <meta charset="utf-8"/>
+    </head>
+    <body>
+        <a href="http://localhost:8080/information">Information</a>
+        <br>
+        <img th:src="greenfox.png" height="192" width="192">
+
+        <p th:text="'This is Mr ' +
+        ${name} + ' Currently living on ' +
         ${food} + ' and ' +
         ${drink} + '. He knows ' +
         ${indexOfTricks} + ' tricks' "/>
-<h1> Known triks</h1>
-<ul>
-    <li>Write HTML</li>
-    <li>Code in Java</li>
-</ul>
-</body>
+        <h1> Known triks</h1>
+        <ul>
+            <li>Write HTML</li>
+            <li>Code in Java</li>
+        </ul>
+    </body>
 </html>
