fix(index.html): fixed the picture issue

--- a/week-07/day-4/programer-fox-club/src/main/resources/templates/index.html
+++ b/week-07/day-4/programer-fox-club/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <body>
         <a href="http://localhost:8080/information">Information</a>
         <br>
-        <img th:src="greenfox.png" height="192" width="192">
+        <img src="image/greenfox.png" height="192" width="192">
 
         <p th:text="'This is Mr ' +
         ${name} + ' Currently living on ' +
