--- a/week-07/day-4/programer-fox-club/src/main/resources/templates/index.html
+++ b/week-07/day-4/programer-fox-club/src/main/resources/templates/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Thymeleaf Exercise #</title>
+        <title>Fox Club Exercise #</title>
         <link rel="stylesheet" th:href="@{/style.css}"/>
         <meta charset="utf-8"/>
     </head>
     <body>
         <a href="http://localhost:8080/information">Information</a>
         <br>
-        <img src="image/greenfox.png" height="192" width="192">
+        <img src="/image/greenfox.png" height="192" width="192">
 
-        <p th:text="'This is Mr ' +
-        ${name} + ' Currently living on ' +
-        ${food} + ' and ' +
-        ${drink} + '. He knows ' +
-        ${indexOfTricks} + ' tricks' "/>
+        <p th:object="${fox}" th:text="'This is Mr ' +
+        *{name} + ' Currently living on ' +
+        *{foods} + ' and ' +
+        *{drinks} + '. He knows ' +
+        *{tricks} + ' tricks' "/>
         <h1> Known triks</h1>
         <ul>
             <li>Write HTML</li>
