--- a/week-07/day-4/programer-fox-club/src/main/resources/templates/login.html
+++ b/week-07/day-4/programer-fox-club/src/main/resources/templates/login.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Thymeleaf Exercise #</title>
+        <title>Fox Club Exercise #</title>
         <link rel="stylesheet" th:href="@{/style.css}"/>
         <meta charset="utf-8"/>
     </head>
     <body>
-
         <br>
         <h1>Welcome to Programmer Fox Club</h1>
         <p>Please provide a name, so you can associate it to your pet!</p>
-        <form action="/" method="GET">
+        <form action="/login" method="POST">
             <label for="name">Name: </label>
-            <input type="text" name="name" id="name"/>
+            <input type="text" name="username" id="name"/>
             <input type="submit" value="GO"/>
         </form>
-
     </body>
 </html>
