fix(Bank of Sigma): fixes some issue

--- a/week-07/day-2/bankofsimba/src/main/resources/templates/listaccounts.html
+++ b/week-07/day-2/bankofsimba/src/main/resources/templates/listaccounts.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/StyleTable.css}"/>
     <title th:text="${name}" ></title>
 </head>
-<h1>BANK OF SIMBA app</h1>
+<h1 align= 180 px>BANK OF SIMBA </h1>
+    <h2 align= 180 px>The first African bank we can really trust</h2>
+
 <div th:if="${#lists.isEmpty(newBankAccount)}">
     <p>No bank accounts in the list</p>
 </div>
