--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
         <title>Title</title>
     </head>
     <body>
-        <h1>Todos for today</h1>
-        <ul th:each="todo : ${newtodo}">
-            <li>Start the day</li>
-            <li>Finish H2 workshop1</li>
-            <li>Finish JPA workshop2</li>
-            <li>Create CRUD project</li>
-            <li th:text="${todo.title}"></li>
-        </ul>
+        <header>
+            <h1  >Todos for today:</h1>
+            <a th:href="@{/add}">Add new Todo</a>
+            <a th:href="@{/delete}">Delete Todo</a>
+            <table border="1">
+                <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Urgent</th>
+                    <th>Done</th>
+                </tr>
+                <tr th:if="${todo.isDone()} == false and ${istrue} == 'true'" th:each="todo: ${todos}">
+                <tr th:unless="${todo.isDone()} == false and ${istrue} == 'true'" th:each="todo: ${todos}">
+                    <td th:text="${todo.getId()}"></td>
+                    <td th:text="${todo.getTitle()}"></td>
+                    <td th:text="${todo.isUrgent()}"></td>
+                    <td th:text="${todo.isDone()}"></td>
+                </tr>
+            </table>
+        </header>
+
     </body>
 </html>
