SQL database todo list adding and listing

--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/delete.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/delete.html
@@ -7,7 +7,7 @@
     <body>
         <form action="#" th:action="@{/delete}" th:object="${todo}" method="post">
             <label for="deleteTodo" >Todo:</label>
-            <input type="text" id="deleteTodo" th:field="*{}">
+            <input type="text" id="deleteTodo" name= "title" th:field="*{title}">
             <input type="submit" value="Add">
         </form>
 
