--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
@@ -6,29 +6,30 @@
     </head>
     <body>
         <header>
-            <h1  >Todos for today:</h1>
+            <h1>Todos for today:</h1>
             <a th:href="@{/add}">Add new Todo</a>
             <a th:href="@{/delete}">Delete Todo</a>
             <div class="container">
-            <h2>Search for Todos</h2>
-            <form th:object="${todos}" th:action="@{/todolist}" method="get">
-                <input type="text" name="search" id="search"/>
-                <input type="submit" value="Search"/>
-            </form>
+                <h2>Search for Todos</h2>
+                <form th:object="${todos}" th:action="@{/todolist}" method="get">
+                    <input type="text" name="search" id="search"/>
+                    <input type="submit" value="Search"/>
+                </form>
                 <table border="1">
-                <tr>
-                    <th>ID</th>
-                    <th>Title</th>
-                    <th>Urgent</th>
-                    <th>Done</th>
-                </tr>
+                    <tr>
+                        <th>ID</th>
+                        <th>Title</th>
+                        <th>Urgent</th>
+                        <th>Done</th>
+                    </tr>
                     <tr th:each="todo : ${todos}">
-                    <td th:text="${todo.getId()}"></td>
-                    <td th:text="${todo.getTitle()}"></td>
-                    <td th:text="${todo.isUrgent()}"></td>
-                    <td th:text="${todo.isDone()}"></td>
-                </tr>
-            </table>
+                        <td th:text="${todo.getId()}"></td>
+                        <td th:text="${todo.getTitle()}"></td>
+                        <td th:text="${todo.isUrgent()}"></td>
+                        <td th:text="${todo.isDone()}"></td>
+                        <td><a th:href="'/' + ${todo.id} + '/delete'">Delete Todo</a></td>
+                    </tr>
+                </table>
             </div>
         </header>
     </body>
