--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
@@ -21,6 +21,8 @@
                         <th>Title</th>
                         <th>Urgent</th>
                         <th>Done</th>
+                        <th>Delete</th>
+                        <th>Edit</th>
                     </tr>
                     <tr th:each="todo : ${todos}">
                         <td th:text="${todo.getId()}"></td>
@@ -28,6 +30,7 @@
                         <td th:text="${todo.isUrgent()}"></td>
                         <td th:text="${todo.isDone()}"></td>
                         <td><a th:href="'/' + ${todo.id} + '/delete'">Delete Todo</a></td>
+                        <td><a th:href="'/' + ${todo.id} + '/addnewtodo'">Edit Todo</a></td>
                     </tr>
                 </table>
             </div>
