--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
@@ -30,7 +30,7 @@
                         <td th:text="${todo.isUrgent()}"></td>
                         <td th:text="${todo.isDone()}"></td>
                         <td><a th:href="'/' + ${todo.id} + '/delete'">Delete Todo</a></td>
-                        <td><a th:href="'/' + ${todo.id} + '/addnewtodo'">Edit Todo</a></td>
+                        <td><a th:href="'/' + ${todo.id} + '/edit'">Edit Todo</a></td>
                     </tr>
                 </table>
             </div>
