feat(TheReddit): creating the submit and URL modification buttons

--- a/week-08/day-5/src/main/resources/templates/index.html
+++ b/week-08/day-5/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
         <title>Title</title>
     </head>
     <body>
-        <h1>Muk0dik$</h1>
+        <a href="/submit">Submit new post!</a>
+        <h1>Trending Post</h1>
     </body>
 </html>
