--- a/week-08/day-5/src/main/resources/templates/submit.html
+++ b/week-08/day-5/src/main/resources/templates/submit.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" >
         <title>Title</title>
     </head>
     <body>
-        
+        <form action="#" th:action="@{/submit}" th:object="${newpost}" method="post">
+            <label for="addtitle" >Add URL title:</label>
+            <input type="text" id="addtitle" th:field="*{urlTitle}">
+            <label for="addurl" >Add URL:</label>
+            <input type="text" id="addurl" th:field="*{url}">
+            <input type="submit" value="Add">
+        </form>
     </body>
 </html>
