--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
@@ -2,19 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/StyleSheet.css}"/>
         <title>Title</title>
     </head>
     <body>
         <header>
-            <h1>Todos for today:</h1>
-            <a th:href="@{/add}">Add new Todo</a>
-            <a th:href="@{/delete}">Delete Todo</a>
             <div class="container">
                 <h2>Search for Todos</h2>
                 <form th:object="${todos}" th:action="@{/todolist}" method="get">
                     <input type="text" name="search" id="search"/>
                     <input type="submit" value="Search"/>
                 </form>
+                <h1>Todos for today:</h1>
                 <table border="1">
                     <tr>
                         <th>ID</th>
@@ -29,11 +28,12 @@
                         <td th:text="${todo.getTitle()}"></td>
                         <td th:text="${todo.isUrgent()}"></td>
                         <td th:text="${todo.isDone()}"></td>
-                        <td><a th:href="'/' + ${todo.id} + '/delete'">Delete Todo</a></td>
-                        <td><a th:href="'/' + ${todo.id} + '/edit'">Edit Todo</a></td>
+                        <td><a th:href="'/' + ${todo.id} + '/delete'"><button type="button">Delete</button></a></td>
+                        <td><a th:href="'/' + ${todo.id} + '/edit'"><button type="button">Edit</button></a></td>
                     </tr>
                 </table>
             </div>
+            <a th:href="@{/add}"><button type="button">Add new Todo</button></a>
         </header>
     </body>
 </html>
