--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/edit.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/edit.html
@@ -1,50 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap-theme.min.css" />
-        <title>Todo Crud App</title>
+        <meta charset="UTF-8" >
+        <title>Edit</title>
     </head>
     <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <h1 class="text-center">Edit Todo</h1>
-                    </br>
-                    <form class="form-horizontal" action="#" th:action="@{'edit'}" th:object="${todo}" method="post" >
-                        <div class="form-group">
-                            <label for="titleId" class="col-sm-2 control-label" >Description</label>
-                            <div class="col-sm-10">
-                                <input type="text" id="titleId" class="form-control" name="title" th:field="*{title}">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <div class="checkbox">
-                                    <input type="checkbox" name="urgent" th:value="*{urgent}" th:field="*{urgent}"> Urgent
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <div class="checkbox">
-                                    <input type="checkbox" name="done" th:value="*{done}" th:field="*{done}"> Done
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <input type="submit" class="btn btn-default btn-sm" value="Submit"> <a class="btn btn-warning btn-sm" role="button" href="/todo/list">Cancel</a>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-        </div>
-        <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
-        <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
+        <form th:action="'/edit'" method="post">
+            <input type="text" th:field="${todo.title}">
+            <input type="checkbox" th:field="${todo.done}"> Done
+            <input type="checkbox" th:field="${todo.urgent}"> Urgent
+            <input type="hidden" th:field="${todo.id}">
+            <input type="submit" value="Edit">
+        </form>
+        <!--<form action="#" th:action="@{/delete}" th:object="${todo}" method="post">-->
+            <!--<label for="deleteTodo" >Todo:</label>-->
+            <!--<input type="text" id="deleteTodo" name= "title" th:field="*{title}">-->
+            <!--<input type="submit" value="Add">-->
+        <!--</form>-->
+
     </body>
 </html>
