--- a/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/connectionwithmysql/src/main/resources/templates/todolist.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <h2>Search for Todos</h2>
                 <form th:object="${todos}" th:action="@{/todolist}" method="get">
-                    <input type="text" name="search" id="search"/>
+                    <input type="text" name="search"/>
                     <input type="submit" value="Search"/>
                 </form>
                 <h1>Todos for today:</h1>
@@ -28,12 +28,20 @@
                         <td th:text="${todo.getTitle()}"></td>
                         <td th:text="${todo.isUrgent()}"></td>
                         <td th:text="${todo.isDone()}"></td>
-                        <td><a th:href="'/' + ${todo.id} + '/delete'"><button type="button">Delete</button></a></td>
-                        <td><a th:href="'/' + ${todo.id} + '/edit'"><button type="button">Edit</button></a></td>
+                        <td>
+                            <form th:action="'/' + ${todo.getId()} + '/delete'" method="POST">
+                                <input type="submit" value="Delete">
+                            </form>
+                        </td>
+                        <td><a th:href="'/' + ${todo.id} + '/edit'">
+                            <button type="button">Edit</button>
+                        </a></td>
                     </tr>
                 </table>
             </div>
-            <a th:href="@{/add}"><button type="button">Add new Todo</button></a>
+            <a th:href="@{/add}">
+                <button type="button">Add new Todo</button>
+            </a>
         </header>
     </body>
 </html>
